--- a/bq-project/src/index.html
+++ b/bq-project/src/index.html
@@ -11,6 +11,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
       rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/f9d8950ad1.js"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <app-root></app-root>
